force-app/main/default/objects/Favourite__c/Favourite__c.object-meta.xml
<CustomObject>
    <description>Store All the info of Favourite Item for AnyFav app.</description>
    <label>Favourite Item</label>
    <nameField>
        <displayFormat>AF-{000}</displayFormat>
        <label>Favourite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Favourite Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>