force-app/main/default/objects/Favourite__c/fields/Favourite_URL__c.field-meta.xml
<CustomField>
    <fullName>Favourite_URL__c</fullName>
    <label>Favourite URL</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>