force-app/main/default/objects/Favourite__c/fields/Number_Accesses__c.field-meta.xml
<CustomField>
    <fullName>Number_Accesses__c</fullName>
    <label>Number Accesses</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>