force-app/main/default/objects/Favourite__c/fields/Recent_Access_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Recent_Access_DateTime__c</fullName>
    <label>Recent Access DateTime</label>
    <type>DateTime</type>
</CustomField>