force-app/main/default/objects/Favourite__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <inlineHelpText>Comma separated list of tags.</inlineHelpText>
    <label>Tags</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>